--- a/indexP.html
+++ b/indexP.html
@@ -15,9 +15,9 @@
   </header>
   <main>
     <div id="presentazione">
-      <p>I'm an italian 20 years old mr. nobody, rolling and struggling to find my way</p>
-      <p>Young man, spaghetti eater, mosquito killer and junior free lance illustrator</p>
-      <p>Born in Lumezzane, passing by Milan, moving forward to anywhere but where I am now</p>
+    
+      <p>Communication design student at Politecnico di Milano,</p> <p>junior free lance illustrator in leisure hours, but in the end</p>
+      <p>I'm just an italian 20 years old mr. nobody, rolling and struggling to find his way</p>
     </div>
     <div id="Instagram" class="foto"><a href="https://www.instagram.com/lorenzourietti/" id="is"><img src="instagram-icon-white-on-black-circle.png" id="Instagram"></img></a></div>  <!--Instagram-->
 
