--- a/indexS.html
+++ b/indexS.html
@@ -28,7 +28,7 @@
       <div class="box" id="box9">   <a href="ImmaginiS/hendrix.jpg" data-lightbox="gallery" data-title="Jimi Hendrix">       <img data-src="ImmaginiS/hendrix_thumb.jpg" id="I9" class="fot">       </a> </div>
       <div class="box" id="box10">  <a href="ImmaginiS/hanckock.jpg" data-lightbox="gallery" data-title="Herbie Hancock">      <img data-src="ImmaginiS/hanckock_thumb.jpg" id="I10" class="fot">     </a> </div>
       <div class="box" id="box11">  <a href="ImmaginiS/red.jpg" data-lightbox="gallery" data-title="Jack Kerouac in red">           <img data-src="ImmaginiS/red_thumb.jpg" id="I11" class="fot">          </a> </div>
-      <div class="box" id="box13">  <a href="ImmaginiS/Leslie.jpg" data-lightbox="gallery" data-title="Rose Leslie">        <img data-src="ImmaginiS/Leslie_thumb.jpg" id="I13" class="fot">       </a> </div>
+      <div class="box" id="box13">  <a href="ImmaginiS/leslie.jpg" data-lightbox="gallery" data-title="Rose Leslie">        <img data-src="ImmaginiS/leslie_thumb.jpg" id="I13" class="fot">       </a> </div>
       <div class="box" id="box14">  <a href="ImmaginiS/self.jpg" data-lightbox="gallery" data-title="Self-portrait">          <img data-src="ImmaginiS/self_thumb.jpg" id="I15" class="fot">         </a> </div>
       <div class="box" id="box16">  <a href="ImmaginiS/fight_club.jpg" data-lightbox="gallery" data-title="fight club study">    <img data-src="ImmaginiS/fight_club_thumb.jpg" id="I16" class="fot">   </a> </div>
       <div class="box" id="box17">  <a href="ImmaginiS/keith.jpg" data-lightbox="gallery" data-title="Keith Richards">         <img data-src="ImmaginiS/keith_thumb.jpg" id="I17" class="fot">        </a> </div>
