--- a/indexS.html
+++ b/indexS.html
@@ -18,7 +18,7 @@
     <div class="grid-container">
       <div class="box" id="box1">   <a href="ImmaginiS/model.jpg" data-lightbox="gallery" data-title="Model">         <img data-src="ImmaginiS/model_thumb.jpg" id="I1" class="fot"></a> </div>
       <div class="box" id="box2">   <a href="ImmaginiS/Schiele_copy.jpg" data-lightbox="gallery" data-title="Omage to Egon Schiele">  <img data-src="ImmaginiS/Schiele_copy_thumb.jpg" id="I2" class="fot">  </a>  </div>
-      <div class="box" id="box3">   <a href="ImmaginiS/young_lady.jpg" data-lightbox="gallery" data-title="Young lady">    <img data-src="ImmaginiS/Young_lady_thumb.jpg" id="I3" class="fot">    </a> </div>
+      <div class="box" id="box3">   <a href="ImmaginiS/Young_lady.jpg" data-lightbox="gallery" data-title="Young lady">    <img data-src="ImmaginiS/Young_lady_thumb.jpg" id="I3" class="fot">    </a> </div>
       <div class="box" id="box4">   <a href="ImmaginiS/Vicious.jpg" data-lightbox="gallery" data-title="Sid Vicious">       <img data-src="ImmaginiS/Vicious_thumb.jpg" id="I4" class="fot">       </a> </div>
       <div class="box" id="box5">   <a href="ImmaginiS/doriforo.jpg" data-lightbox="gallery" data-title="Doriforo di Policleto">      <img data-src="ImmaginiS/doriforo_thumb.jpg" id="I5" class="fot">      </a> </div>
       <div class="box" id="box6">   <a href="ImmaginiS/Venice.jpg" data-lightbox="gallery" data-title="Venice">        <img data-src="ImmaginiS/Venice_thumb.jpg" id="I6" class="fot">        </a> </div>
