--- a/indexG.html
+++ b/indexG.html
@@ -22,7 +22,7 @@
       <a href="Immagini/giu.jpg"  data-lightbox="gallery" data-title="Giuditta I"> <div class="box" id="box4"><img data-src="Immagini/giuditta_thumb.jpg" id="I7" class="fot">  <div class="description">ASSASSIN</div>    <div class="name">  GIUDITTA <b>I</b>  </div>  </div>                         </a>
 
       <a href="Immagini/FPivano.jpg"  data-lightbox="gallery" data-title="Fernanda Pivano"> <div class="box" id="box5"><img data-src="Immagini/pivano_thumb.jpg" id="I9" class="fot">  <div class="description">JOURNALIST</div>    <div class="name">  FERNANDA <b>PIVANO</b>  </div>  </div>                    </a>
-      <a href="ImmaginiS/keith.jpg"  data-lightbox="gallery" data-title="Keith Richards"> <div class="box" id="box6"><img data-src="Immagini/Keith_thumb.jpg" id="I6" class="fot">  <div class="description">MUSICIAN</div>    <div class="name">  KEITH <b>RICHARDS</b>  </div>  </div>                    </a>
+      <a href="ImmaginiS/keith.jpg"  data-lightbox="gallery" data-title="Keith Richards"> <div class="box" id="box6"><img data-src="Immagini/Keith_thumb_copia.jpg" id="I6" class="fot">  <div class="description">MUSICIAN</div>    <div class="name">  KEITH <b>RICHARDS</b>  </div>  </div>                    </a>
       <a href="ImmaginiS/doriforo.jpg"  data-lightbox="gallery" data-title="Doriforo"> <div class="box" id="box7"><img data-src="Immagini/doriforo_thumb.jpg" id="I7" class="fot">  <div class="description">PIECE OF MARBLE</div>    <div class="name">  DORIFORO <b>BY POLICLETO</b>  </div>  </div>       </a>
       <a href="Immagini/mura.jpg"  data-lightbox="gallery" data-title="Haruki Murakami"> <div class="box" id="box8"><img data-src="Immagini/murakami_thumb.jpg" id="I1" class="fot">  <div class="description">WRITER</div>    <div class="name">  HARUKI <b>MURAKAMI</b>  </div>  </div>                      </a>
 
@@ -33,7 +33,7 @@
 
       <a href="Immagini/tarantino2.jpg"  data-lightbox="gallery" data-title="Quentin Tarantino"> <div class="box" id="box19"><img data-src="Immagini/Tarantino.jpg" id="I19" class="fot">  <div class="description">FILM DIRECTOR</div>    <div class="name">  QUENTIN <b>TARANTINO</b>  </div>  </div>                     </a>
       <a href="Immagini/rietveld.jpeg"  data-lightbox="gallery" data-title="Gerrit Rietveld"> <div class="box" id="box14"><img data-src="Immagini/rietveld_foto.jpeg" id="I7" class="fot">  <div class="description">PRODUCT DESIGNER</div>    <div class="name">  GERRIT <b>RIETVELD</b>  </div>  </div>                               </a>
-      <a href="ImmaginiS/Iggy.jpg"  data-lightbox="gallery" data-title="Iggy Pop"> <div class="box" id="box15"><img data-src="Immagini/Iggy_thumb.jpg" id="I15" class="fot">  <div class="description">MUSICIAN</div>    <div class="name">  IGGY <b>POP</b>  </div>  </div>                             </a>
+      <a href="ImmaginiS/Iggy.jpg"  data-lightbox="gallery" data-title="Iggy Pop"> <div class="box" id="box15"> <img data-src="Immagini/Iggy_thumb.jpg" id="I15" class="fot">  <div class="description">MUSICIAN</div>    <div class="name">  IGGY <b>POP</b>  </div>  </div>                             </a>
       <a href="ImmaginiS/Vicious.jpg" data-lightbox="gallery" data-title="Sid Vicious"> <div class="box" id="box16"><img data-src="Immagini/sid.jpg" id="I7" class="fot">  <div class="description">MUSICIAN</div>    <div class="name">  SID <b>VICIOUS</b>  </div>  </div>                        </a>
 
 
